[gd_scene format=3 uid="uid://b6sttng1yxfx7"]

[ext_resource type="Script" uid="uid://becpgv5l8r6vy" path="res://scripts/game_stats.gd" id="1_ul0qu"]
[ext_resource type="FontFile" uid="uid://byrn6tqmul438" path="res://fonts/Zen_Dots/ZenDots-Regular.ttf" id="2_thv0x"]
[ext_resource type="Texture2D" uid="uid://ctrhv3rpvm6vx" path="res://assets/plane_pack/flying_coins/animatable_parts/gold_coin.png" id="3_kqpaf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8j22x"]
bg_color = Color(0.16565639, 0.16565642, 0.16565636, 0.76862746)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.41598046, 0.41598043, 0.4159804, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ul0qu"]
bg_color = Color(0.26293245, 0.26293245, 0.26293245, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.56897324, 0.5689726, 0.5689727, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thv0x"]
bg_color = Color(0.6816288, 0.5742902, 0.09210732, 1)
border_width_left = 4
border_width_top = 4
border_width_bottom = 4
border_color = Color(0.8640058, 0.7160659, 0.052937835, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_bottom_left = 8
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kqpaf"]
bg_color = Color(0.6322254, 1.9492954e-06, 3.3691526e-07, 1)
border_width_left = 4
border_width_top = 4
border_width_bottom = 4
border_color = Color(0.9474059, 4.0670484e-06, 3.85046e-07, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_bottom_left = 8
corner_detail = 10

[node name="GameStats" type="Control" unique_id=622121016]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ul0qu")

[node name="Panel" type="Panel" parent="." unique_id=363102599]
layout_mode = 0
offset_left = 13.714233
offset_right = 1152.0
offset_bottom = 83.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8j22x")

[node name="FuelBar" type="ProgressBar" parent="." unique_id=454286152]
layout_mode = 0
offset_left = 789.0
offset_top = 12.0
offset_right = 1133.0
offset_bottom = 37.0
theme_override_styles/background = SubResource("StyleBoxFlat_ul0qu")
theme_override_styles/fill = SubResource("StyleBoxFlat_thv0x")
value = 25.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="." unique_id=544855285]
layout_mode = 0
offset_left = 789.0
offset_top = 45.0
offset_right = 1133.0
offset_bottom = 71.0
theme_override_styles/background = SubResource("StyleBoxFlat_ul0qu")
theme_override_styles/fill = SubResource("StyleBoxFlat_kqpaf")
value = 25.0
show_percentage = false

[node name="FlashTimer" type="Timer" parent="." unique_id=596606602]
wait_time = 0.25
autostart = true

[node name="HBoxContainer2" type="HBoxContainer" parent="." unique_id=19860865]
layout_mode = 0
offset_left = 181.0
offset_top = 19.0
offset_right = 291.0
offset_bottom = 64.0
theme_override_constants/separation = 17

[node name="TextureRect" type="TextureRect" parent="HBoxContainer2" unique_id=1966667800]
custom_minimum_size = Vector2(25.67, 26.585)
layout_mode = 2
texture = ExtResource("3_kqpaf")
expand_mode = 2

[node name="CoinLabel" type="Label" parent="HBoxContainer2" unique_id=1142905640]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_thv0x")
theme_override_font_sizes/font_size = 37
text = "21"

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=699071543]
layout_mode = 0
offset_left = 485.0
offset_top = 2.0
offset_right = 608.0
offset_bottom = 47.0
theme_override_constants/separation = 17

[node name="ScoreLabel2" type="Label" parent="HBoxContainer" unique_id=870677127]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6052743, 0.6052744, 0.6052741, 1)
theme_override_fonts/font = ExtResource("2_thv0x")
theme_override_font_sizes/font_size = 15
text = "Score"

[node name="ScoreLabel" type="Label" parent="HBoxContainer" unique_id=62980470]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_thv0x")
theme_override_font_sizes/font_size = 37
text = "21"

[node name="HBoxContainer3" type="HBoxContainer" parent="." unique_id=172591682]
layout_mode = 0
offset_left = 485.0
offset_top = 43.0
offset_right = 608.0
offset_bottom = 88.0
theme_override_constants/separation = 17

[node name="BestScoreLabel2" type="Label" parent="HBoxContainer3" unique_id=1439032158]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6052743, 0.6052744, 0.6052741, 1)
theme_override_fonts/font = ExtResource("2_thv0x")
theme_override_font_sizes/font_size = 15
text = "Best  "

[node name="BestScoreLabel" type="Label" parent="HBoxContainer3" unique_id=552619016]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_thv0x")
theme_override_font_sizes/font_size = 26
text = "21"

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
